# elputorepo

./: .cursorrules  .gitignore  .pre-commit-config.yaml  Makefile  docker-compose.yaml  elputorepo.code-workspace  loki-config.yml  main.py  promtail-config.yml  pyproject.toml  vms
apps/api/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Taskfile.yml  alembic.ini  mypy.ini  pyproject.toml  ruff.toml
apps/api/bruno/: bruno.json  create-event.bru  create-ticket.bru  create-user.bru  delete-event.bru  get all events.bru  get event.bru
apps/api/migrations/: env.py
apps/api/migrations/versions/: 6a2eec7351f9_add_age_column_to_users.py  aaa8c95a1e87_create_tables.py  c0f20f5b0075_add_pizza_id_column_to_pizzas_table.py  c335f44d2aa4_generate_tables.py  c8fb99b18ddb_create_tables.py  df244226696b_add_users_table.py  e43e0444b171_create_tables.py  f2298640cae0_add_capacity_to_events_and_create_users_.py
apps/api/mongodb/: init-mongo.js
apps/api/scripts/: format.sh  lint.sh  run.sh  test.sh  typecheck.sh
apps/api/src/: main.py
apps/api/src/apps/admin_panel/: __init__.py  admin_panel_factory.py  container.py
apps/api/src/apps/admin_panel/views/: __init__.py  employee_view.py  event_view.py  pizza_view.py  shift_pause_view.py  shift_view.py
apps/api/src/apps/cli/: app.py
apps/api/src/apps/cli/commands/core/: main.py
apps/api/src/apps/rest/: container.py
apps/api/src/apps/rest/core/: container.py  router.py
apps/api/src/apps/rest/core/companies/: router.py
apps/api/src/apps/rest/core/employees/: router.py
apps/api/src/apps/rest/core/events/: router.py
apps/api/src/apps/rest/core/pizzas/: router.py
apps/api/src/apps/rest/core/shifts/: router.py
apps/api/src/apps/rest/core/users/: router.py
apps/api/src/apps/rest/utils/: app_factory.py  router.py
apps/api/src/contexts/core/: __init__.py
apps/api/src/contexts/core/application/: __init__.py
apps/api/src/contexts/core/application/commands/: create_employee_command_handler.py  create_pizza_command_handler.py
apps/api/src/contexts/core/application/events/: on_event_created_event_handler.py  on_shift_created_event_handler.py
apps/api/src/contexts/core/application/queries/: __init__.py  get_employees_query_handler.py  get_pizzas_query_handler.py
apps/api/src/contexts/core/application/services/: event_projection_service.py
apps/api/src/contexts/core/application/utils/: logging.py
apps/api/src/contexts/core/domain/: __init__.py
apps/api/src/contexts/core/domain/entities/: __init__.py  company.py  employee.py  event.py  pizza.py  shift.py  shift_pause.py  user.py
apps/api/src/contexts/core/domain/errors/: __init__.py  company_not_found_error.py  event_not_found_error.py  shift_not_found_error.py
apps/api/src/contexts/core/domain/events/: __init__.py  event_created_domain_event.py  event_deleted_domain_event.py  shift_created_domain_event.py  shift_ended_domain_event.py  shift_paused_domain_event.py  shift_resumed_domain_event.py  shift_started_domain_event.py  user_created_domain_event.py
apps/api/src/contexts/core/domain/repositories/: __init__.py  company_repository.py  employee_repository.py  event_repository.py  pizza_repository.py  (+2 more)
apps/api/src/contexts/core/infrastructure/: __init__.py  container.py
apps/api/src/contexts/shared/: __init__.py  settings.py
apps/api/src/contexts/shared/application/: __init__.py
apps/api/src/contexts/shared/domain/: __init__.py  aggregate.py  command_handler.py  domain_event.py  event_bus.py  event_handler.py  query_handler.py  schemas.py
apps/api/src/contexts/shared/infrastructure/: __init__.py  app_factory.py  composite_event_bus.py  container.py  in_memory_event_bus.py  logging.py  rabbitmq_event_bus.py  router.py
apps/api/tests/integration/core/infrastructure/: conftest.py  test_sqlalchemy_employee_repository.py  test_sqlalchemy_event_repository.py
(+238 files in other folders)
