[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "dependency-injector>=4.48.2",
    "fastapi[standard]>=0.117.1",
    "logger",
    "pika>=1.3.2",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.11.0",
    "returns>=0.26.0",
    "sqladmin>=0.21.0",
    "sqlalchemy>=2.0.43",
    "testcontainers[postgresql]>=4.13.2",
    "types-pika>=1.2.0b1",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.17",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.13.2",
    "typer>=0.19.2",
]


[tool.uv.sources]
logger = { path = "../../packages/logger", editable = true }

[tool.pytest.ini_options]
python_files = ["test*.py", "tests.py"]
pythonpath = ["src"]
markers = [
    "integration: marks tests as integration tests",
]
