[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "asgi-correlation-id>=4.3.4",
    "beanie>=2.0.0",
    "dependency-injector>=4.48.2",
    "fastapi[standard]>=0.117.1",
    "motor>=3.7.1",
    "pika>=1.3.2",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.11.0",
    "pytest-asyncio>=1.3.0",
    "returns>=0.26.0",
    "sqladmin>=0.21.0",
    "structlog>=25.5.0",
    "testcontainers[postgresql]>=4.13.2",
    "types-pika>=1.2.0b1",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.17",
    "freezegun>=1.5.5",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.13.2",
    "sqlalchemy[mypy]>=2.0.43",
    "typer>=0.19.2",
]


[tool.pytest.ini_options]
python_files = ["test*.py", "tests.py"]
pythonpath = ["src"]
markers = [
    "integration: marks tests as integration tests",
]
